[metadata]
name = murano.plugins.remoterunner
description = Murano-Remote Runner integration plugin
summary = Plugin for executing shell script on remote host via Remote Runner with Murano
author = Alexander Bochkarev
author-email = abochkarev@mirantis.com

[files]
packages = remote_runner_plugin

[entry_points]
io.murano.extensions =
    remoterunner.RemoteRunner = remote_runner_plugin:RemoteRunner
